WIP
-----------------------------
* General
  - Add "Remember Size" option in main window Config menu, which remembers last window size.
    This option is enabled by default.
  - Add "remember_size", "window_width", "window_height" options in global user config JSON.

2.22.0 (2024-12-26)
-----------------------------
* General
  - Auto corrects duplicated "column_index" values in widget options to avoid display overlapping.
  - Various code optimization.

* Brake bias Widget
  - Add "show_baseline_bias_delta" option, which shows delta between current and baseline brake bias.
    This can be useful for keeping track of brake bias changes easier during a long race.
    Baseline brake bias is automatically set (and reset) while vehicle is stationary in pit lane.

* Fuel Widget
  - Add "show_absolute_refueling" option (requested by barrett & francescodg), which shows absolute refueling value
    instead of relative refueling when enabled.
    Note, "+" or "-" sign is not displayed with absolute refueling.
    Differences between relative and absolute refueling:
    - Relative refueling value shows total amount "additional" fuel required to finish the remaining race length,
      which matches "relative refueling" mechanism (amount to add on top of remaining fuel in tank) in "RF2".
    - Absolute refueling value shows absolute total amount fuel required to finish the remaining race length,
      which matches "absolute refueling" mechanism (amount total fuel to fill tank up to) in "LMU".
    - Also see "estimated laps" display option in "Session Widget" that can be used for "absolute refueling".
  - Add "caption_text_absolute_refuel" option that shows absolute refueling caption text if
    "show_absolute_refueling" option is enabled. This helps distinguish difference from relative refueling.
    Default caption text is "abfuel".
  - Exchanged column positions of "end" and "pits" for consistency and readability.
    "pits" column is now in the same column as "early".
