@@ -1323,12 +1323,18 @@ WIDGET_DEFAULT = {
         "bkg_color_brand_logo": "#222222",
         "bkg_color_player_brand_logo": "#CCCCCC",
         "show_time_gap": True,
+        "show_time_gap_sign": False,
         "time_gap_decimal_places": 1,
         "time_gap_width": 4,
         "font_color_time_gap": "#FFFFFF",
         "bkg_color_time_gap": "#222222",
         "font_color_player_time_gap": "#000000",
         "bkg_color_player_time_gap": "#CCCCCC",
+        "show_highlighted_nearest_time_gap": True,
+        "nearest_time_gap_threshold_front": 1,
+        "nearest_time_gap_threshold_behind": 2,
+        "font_color_nearest_time_gap": "#FFFFFF",
+        "bkg_color_nearest_time_gap": "#AA22AA",
         "show_laptime": True,
         "font_color_laptime": "#AAAAAA",
         "bkg_color_laptime": "#2A2A2A",
